packages/app/components/My.module.scss
@import '../styles/constants';

$phrase-item-margin: 1.5rem;
$search-input-wudth-coeff: 1.5;

.wrapper {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;

  .container {
    position: relative;
    width: 100%;
    height: 100%;
    max-width: $translate-container-max;
    padding: 0 1rem;
    margin-top: 2rem;

    .search {
      position: relative;
      display: flex;
      flex-flow: row wrap-reverse;
      align-items: center;
      justify-content: space-between;
      margin-top: 1.5rem;
      width: 100%;

      .input_wrapper {
        max-width: calc($small-width * $search-input-wudth-coeff);
        width: 100%;
      }

      input {
        min-width: calc($small-width - 4rem);
        width: 100%;
        max-width: calc($small-width * $search-input-wudth-coeff);
      }

      .search_input {
        margin-bottom: 0;
      }

      .sorts {
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
        margin: 1rem 0;

        .sort_item {
          display: flex;
          flex-direction: row;
          align-items: center;

          &:first-child {
            margin-right: 0.5rem;
          }
        }

        .asc {
          position: relative;
          transition: transform 0.1s ease-in;
        }

        .desc {
          position: relative;
          transform: rotate(180deg);
          transition: transform 0.1s ease-out;
        }
      }
    }

    .phrases {
      position: relative;
      width: 100%;
      display: flex;
      flex-direction: column;
      align-items: flex-start;
      justify-content: center;
      margin-top: 1rem;

      .pagination {
        position: relative;
        width: 100%;
        display: flex;
        justify-content: flex-end;
        opacity: 0.6;
      }
    }

    .filters {
      padding: 1rem;
      border-radius: 4px;
      margin-top: 1.5rem;

      .filters_tags {
        margin: 1rem;
        display: flex;
        flex-wrap: row wrap;
        align-items: center;
      }
    }

    .item_container {
      position: relative;
      width: 100%;

      .actions {
        margin-bottom: calc(-1 * $phrase-item-margin);
        margin-top: $phrase-item-margin;
        display: flex;
        flex-direction: row;
        justify-content: flex-end;

        .menu_tooltip {
          position: relative;
          width: 100%;
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-around;
        }
      }

      .item {
        display: flex;
        flex-flow: row wrap;
        align-items: center;
        justify-content: space-between;
        border-width: 1px;
        border-style: groove;
        border-radius: 4px;
        margin: $phrase-item-margin 0 0 0;
        padding: 0 1rem;

        .translate {
          margin-left: 1rem;
        }
      }

      .tags {
        display: flex;
        flex-flow: row wrap;

        .tag_item {
          position: relative;
          display: inline-block;
          margin: 0 4px;
        }
      }
    }
  }

  .dialog {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    .dialog__actions {
      display: flex;
      flex-direction: row;
      width: 100%;
      justify-content: space-around;

      .button {
        min-width: 100px;
        padding: 0.5rem;
      }
    }
  }
}

